question group assign to departments and users
