# app/Models/User.php
@@ -4,7 +4,10 @@ namespace App\Models;
 
 use App\Traits\ActionBy;
 use App\Traits\ActionUser;
+use Dyrynda\Database\Support\CascadeSoftDeletes;
 use Illuminate\Database\Eloquent\Relations\BelongsTo;
+use Illuminate\Database\Eloquent\Relations\BelongsToMany;
+use Illuminate\Database\Eloquent\Relations\HasMany;
 use Illuminate\Database\Eloquent\SoftDeletes;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
@@ -15,7 +18,7 @@ use Laravel\Sanctum\HasApiTokens;
  */
 class User extends Authenticatable
 {
-    use HasApiTokens, Notifiable, SoftDeletes, ActionBy, ActionUser;
+    use HasApiTokens, Notifiable, SoftDeletes, ActionBy, ActionUser, CascadeSoftDeletes;
 
     protected $fillable = [
         'name',
@@ -24,8 +27,20 @@ class User extends Authenticatable
         'department_id',
     ];
 
+    protected array $cascadeDeletes = ['questionGroupsRel'];
+
     public function department(): BelongsTo
     {
         return $this->belongsTo(Department::class);
+    }
+
+    public function questionGroups(): BelongsToMany
+    {
+        return $this->belongsToMany(QuestionGroup::class, QuestionGroupUser::class);
+    }
+
+    public function questionGroupsRel(): HasMany
+    {
+        return $this->hasMany(QuestionGroupUser::class);
     }
 }
